# ihmc-optimizer-wrappers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle  build.gradle.kts  build_native_libs.bat  build_native_libs.sh  gradle.properties  run.sh  settings.gradle
.github/: PULL_REQUEST_TEMPLATE.md
csrc/: CMakeLists.txt  OASESConstrainedQPSolver.cpp  OASESConstrainedQPSolver_JNI.cpp  QpOASESJNISolver.cpp  QpOASESJNISolver.h  QpOASESSolverHandle.cpp  QpOASESSolverHandle.h  QuadProgSolver.cpp  qpOASES.i
csrc/qpOASES/: CMakeLists.txt
csrc/qpOASES/src/: MessageHandling.cpp
csrc/quadprog/: INSTALL  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.ac  libtool
csrc/quadprog/m4/: ax_boost_base.m4
csrc/quadprog/src/: QuadProg++.cc  QuadProg++.hh  uQuadProg++.cc  uQuadProg++.hh
gradleScripts/: dependencies.gradle  repositories.gradle  structure.gradle
resources/: libOASESConstrainedQPSolver_rel.dylib  libuQuadProg_rel.dylib
resources/us/ihmc/convexOptimization/: libIHMCOASESConstrainedQPSolver.dylib  libOASESConstrainedQPSolver_rel.jnilib  libqpOASESSwig_rel.dylib  libqpOASESSwig_rel.jnilib  libuQuadProg_rel.jnilib
src/main/java/us/ihmc/convexOptimization/: AbstractQpOASESWrapper.java  QpOASESCWrapper.java  QpOASESJNISolver.java  QuadProgWrapper.java
src/main/java/us/ihmc/convexOptimization/qpOASES/: BooleanType.java  Bounds.java  ConstraintProduct.java  Constraints.java  DenseMatrix.java  HessianType.java  Indexlist.java  MatMatrixHeader.java  Matrix.java  MessageHandling.java  Options.java  PrintLevel.java  QProblem.java  QProblemB.java  QProblemStatus.java  SQProblem.java  SWIGTYPE_p_FILE.java  SWIGTYPE_p_p_int.java  SparseMatrix.java  SparseMatrixRow.java  SubjectTo.java  SubjectToStatus.java  SubjectToType.java  SymDenseMat.java  SymSparseMat.java  SymmetricMatrix.java  TabularOutput.java  VisibilityStatus.java  qpOASES.java  qpOASESConstants.java  qpOASESJNI.java  returnValue.java
src/main/resources/us/ihmc/convexOptimization/: libIHMCOASESConstrainedQPSolver_rel.dylib  libOASESConstrainedQPSolver_rel.dylib  libuQuadProg_rel.dylib
src/test/java/us/ihmc/convexOptimization/: QPSolversTest.java
src/us/ihmc/convexOptimization/: NativeLibraryLoader.java  QpOASESCWrapper.java  QpOASESJNISolver.java  QpOASESSwigWrapper.java  QpOASESWrapper.java  QuadProgWrapper.java
test/us/ihmc/convexOptimization/: QPSolversTest.java  qpOASESTest.java
